# envator

./: .gitignore  LICENSE  README.md  pyproject.toml
devator/: __main__.py  main.py
devator/cli/: app.py  main.py
devator/const/: program_info.py
envator/: __main__.py  main.py
envator/cli/: app.py  main.py
envator/config/: configdict.py  reader.py
envator/config/model/: docker.py  env.py
envator/const/: program_info.py
envator/errors/: handlingfailed.py
envator/handlers/: handler.py
envator/handlers/container/: run.py
envator/model/: container.py  env.py
envator/util/: namingcase.py
tests/config/: configdict_test.py
tests/resources/config/: container-backend.yml
