[tool.poetry]
name = "envator"
version = "0.1.0"
description = "Elevate your development environments"
authors = ["Timor Gruber <timor.gruber@solaredge.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System",
    "Operating System :: Unix",
    "Environment :: Console",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Unix Shell"
]

[tool.poetry.scripts]
envator = "envator.main:run"

[tool.poetry.dependencies]
python = "^3.8.1"
typer = {extras = ["all"], version = "^0.7.0"}
pydantic = "^1.10.2"
emoji = "^2.2.0"
vyper-config = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
flake8 = "^6.0.0"

[tool.black]
line-length = 110

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
